Fix Safari bug that collapsed navlinks within navbar
WIP
Navlinks work as expected on smaller devices
Navbar itself is missing white bg below 1180px

--- a/_sass/_navbar.sass
+++ b/_sass/_navbar.sass
@@ -30,7 +30,10 @@ $hidden-navbar-bg-color: #FAFAFA
 
 .index-navbar #navbar, #navbar
   background: white
-  height: 73px
+  +media(max-width 1180px)
+    background-color: rgba(#FBFBFB, 0.6)
+    padding-bottom: 50px
+  flex-shrink: 0
   img
     margin:
       top: -15px
